--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "v-calendar": "^1.0.0-beta.23",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1",
@@ -32,7 +33,9 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
+    "tailwindcss": "^1.3.5",
     "typescript": "~3.8.3",
+    "vue-cli-plugin-tailwind": "~1.3.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
