--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "date-fns": "^2.12.0",
+    "moment": "^2.24.0",
     "v-calendar": "^1.0.0-beta.23",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
